--- a/src/components/research/Research.css
+++ b/src/components/research/Research.css
@@ -1,160 +1,160 @@
 #research {
-    background-color: var(--background-color);
-    padding-left: 5%;
-    padding-right: 5%;
-    min-height: 100vh;
+  background-color: var(--background-color);
+  padding-left: 5%;
+  padding-right: 5%;
+  min-height: 100vh;
 }
 
 #research h1 {
-    font-family: 'Varela Round', sans-serif;
-    color: var(--teal);
-    padding-top: 90px;
-    padding-bottom: 10px;
+  font-family: 'Varela Round', sans-serif;
+  color: var(--teal);
+  padding-top: 90px;
+  padding-bottom: 10px;
 }
 
 
 /* here */
 .projects-grid {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(200px, 1fr));
-  grid-gap: 40px;
+display: grid;
+grid-template-columns: repeat(1, minmax(200px, 1fr));
+grid-gap: 40px;
 }
 @media (max-width: 900px) {
-  .projects-grid {
-    grid-template-columns: repeat(1, minmax(150px, 1fr));
-  }
+.projects-grid {
+  grid-template-columns: repeat(1, minmax(150px, 1fr));
+}
 }
 
 .projects-card {
-    position: relative;
-    cursor: default;
-    display: flex;
-    flex-direction: column;
-    /* align-items: flex-start; */
-    position: relative;
-    height: 100%;
-    padding: 1rem 1.75rem;
-    border-radius: 8px;
-    align-items: center;
-    justify-content: center;
-    transition: transform 0.5s;
-    /* overflow: hidden; */
+  position: relative;
+  cursor: default;
+  display: flex;
+  /* flex-direction: column; */
+  /* align-items: flex-start; */
+  position: relative;
+  height: 100%;
+  padding: 1rem 1.75rem;
+  border-radius: 8px;
+  align-items: start;
+  justify-content: start;
+  transition: transform 0.5s;
+  /* overflow: hidden; */
 }
 
 .projects-card h5 {
-    font-family: 'Varela Round', sans-serif;
-    color: var(--light-slate);
-    font-size: 1.2rem;
-    margin: 0;
-    padding-top: 20px;
+  font-family: 'Varela Round', sans-serif;
+  color: var(--light-slate);
+  font-size: 1.2rem;
+  margin: 0;
+  padding-top: 20px;
 }
 
-.projects-card:hover {
-    transform: translateY(-10px);
+/* .projects-card:hover {
+  transform: translateY(-10px);
 }
 
 .projects-card:hover .arrow {
-    opacity: 1;
-}
+  opacity: 1;
+} */
 
 .arrow {
-    position: absolute;
-    bottom: -20px;
-    left: 50%;
-    transform: translateX(-50%);
-    opacity: 0;
-    transition: opacity 0.3s;
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s;
 }
 
 .arrow i {
-    font-size: 24px;
-    color: var(--teal); /* Color of the arrow */
-    cursor: pointer;
+  font-size: 24px;
+  color: var(--teal); /* Color of the arrow */
+  cursor: pointer;
 }
 
 #image {
-    border-radius: 8px;
-    width: 400px;
-    height: 200px;
+  border-radius: 4px;
+  width: 150px;
+  height: 150px;
 }
 
-#image:hover {
+/* #image:hover {
+color: rgb(88 199 250 / 100%);
+transition: color 1s;
+} */
+
+
+@property --rotate {
+syntax: "<angle>";
+initial-value: 132deg;
+inherits: false;
+}
+
+@keyframes spin {
+0% {
+  --rotate: 0deg;
+}
+100% {
+  --rotate: 360deg;
+}
+}
+
+.card {
+  background-color: transparent !important;
+
+  width: 405px;
+  height: 205px;
+  color: rgb(88 199 250 / 0%);
+  cursor: pointer;
+  /* position: relative; */
+  /* display: relative; */
+
+  justify-content: center;
+  align-items: center;
+
+  padding: 2px;
+  border-radius: 50px;
+}
+
+a {
+  /* background-color: var(--gif-background); */
+  margin: 0px;
+  /* border-radius: 30px; */
+}
+
+/* .card:hover {
   color: rgb(88 199 250 / 100%);
   transition: color 1s;
 }
 
-
-@property --rotate {
-  syntax: "<angle>";
-  initial-value: 132deg;
-  inherits: false;
-}
-
-@keyframes spin {
-  0% {
-    --rotate: 0deg;
-  }
-  100% {
-    --rotate: 360deg;
-  }
-}
-
-.card {
-    background-color: transparent !important;
-
-    width: 405px;
-    height: 205px;
-    color: rgb(88 199 250 / 0%);
-    cursor: pointer;
-    /* position: relative; */
-    /* display: relative; */
-
-    justify-content: center;
-    align-items: center;
-
-    padding: 2px;
-    border-radius: 50px;
-}
-
-a {
-    /* background-color: var(--gif-background); */
-    margin: 0px;
-    /* border-radius: 30px; */
-}
-
-/* .card:hover {
-    color: rgb(88 199 250 / 100%);
-    transition: color 1s;
-}
-
 .card:hover::before {
-    content: "";
-    width: 104%;
-    height: 102%;
-    border-radius: 8px;
-    background-image: linear-gradient(
-        var(--rotate)
-        , #5ddcff, #3c67e3 43%, #4e00c2);
-    position: absolute;
-    top: -1%;
-    left: -2%;
-    animation: spin 2.5s linear infinite;
+  content: "";
+  width: 104%;
+  height: 102%;
+  border-radius: 8px;
+  background-image: linear-gradient(
+      var(--rotate)
+      , #5ddcff, #3c67e3 43%, #4e00c2);
+  position: absolute;
+  top: -1%;
+  left: -2%;
+  animation: spin 2.5s linear infinite;
 }
 
 .card:hover::after {
-    position: absolute;
-    content: "";
-    top: calc(var(--card-height) / 6);
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    transform: scale(0.8);
-    filter: blur(calc(var(--card-height) / 6));
-    background-image: linear-gradient(
-        var(--rotate)
-        , #5ddcff, #3c67e3 43%, #4e00c2);
-        opacity: 1;
-    transition: opacity .5s;
-    animation: spin 2.5s linear infinite;
+  position: absolute;
+  content: "";
+  top: calc(var(--card-height) / 6);
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  transform: scale(0.8);
+  filter: blur(calc(var(--card-height) / 6));
+  background-image: linear-gradient(
+      var(--rotate)
+      , #5ddcff, #3c67e3 43%, #4e00c2);
+      opacity: 1;
+  transition: opacity .5s;
+  animation: spin 2.5s linear infinite;
 } */
