--- a/src/components/research/Research.css
+++ b/src/components/research/Research.css
@@ -12,50 +12,43 @@
   padding-bottom: 10px;
 }
 
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(200px, 1fr));
+  grid-gap: 40px;
+}
 
-/* here */
-.projects-grid {
-display: grid;
-grid-template-columns: repeat(1, minmax(200px, 1fr));
-grid-gap: 40px;
-}
 @media (max-width: 900px) {
-.projects-grid {
-  grid-template-columns: repeat(1, minmax(150px, 1fr));
-}
+  .projects-grid {
+    grid-template-columns: repeat(1, minmax(150px, 1fr));
+  }
 }
 
 .projects-card {
-  position: relative;
+  display: flex; /* Align children in a row */
+  align-items: center; /* Align children vertically in the center */
+  justify-content: start; /* Align children to the start of the container */
   cursor: default;
-  display: flex;
-  /* flex-direction: column; */
-  /* align-items: flex-start; */
-  position: relative;
   height: 100%;
   padding: 1rem 1.75rem;
   border-radius: 8px;
-  align-items: start;
-  justify-content: start;
   transition: transform 0.5s;
-  /* overflow: hidden; */
+}
+
+#image {
+  border-radius: 1px;
+  height: 180px;
+  width: 180px;
+  margin-right: 2px; /* Add some space between the image and the title */
 }
 
 .projects-card h5 {
   font-family: 'Varela Round', sans-serif;
   color: var(--light-slate);
   font-size: 1.2rem;
-  margin: 0;
-  padding-top: 20px;
+  margin: 0; /* Adjust as needed */
+  /* No padding-top is needed if you want to align it with the image vertically */
 }
-
-/* .projects-card:hover {
-  transform: translateY(-10px);
-}
-
-.projects-card:hover .arrow {
-  opacity: 1;
-} */
 
 .arrow {
   position: absolute;
@@ -72,89 +65,33 @@ grid-gap: 40px;
   cursor: pointer;
 }
 
-#image {
-  border-radius: 4px;
-  width: 110px;
-  height: 110px;
-}
-
-/* #image:hover {
-color: rgb(88 199 250 / 100%);
-transition: color 1s;
-} */
-
-
 @property --rotate {
-syntax: "<angle>";
-initial-value: 132deg;
-inherits: false;
+  syntax: "<angle>";
+  initial-value: 132deg;
+  inherits: false;
 }
 
 @keyframes spin {
-0% {
-  --rotate: 0deg;
-}
-100% {
-  --rotate: 360deg;
-}
+  0% {
+    --rotate: 0deg;
+  }
+  100% {
+    --rotate: 360deg;
+  }
 }
 
 .card {
   background-color: transparent !important;
-
   width: 405px;
   height: 205px;
   color: rgb(88 199 250 / 0%);
   cursor: pointer;
-  /* position: relative; */
-  /* display: relative; */
-
   justify-content: center;
   align-items: center;
-
   padding: 2px;
   border-radius: 50px;
 }
 
 a {
-  /* background-color: var(--gif-background); */
   margin: 0px;
-  /* border-radius: 30px; */
 }
-
-/* .card:hover {
-  color: rgb(88 199 250 / 100%);
-  transition: color 1s;
-}
-
-.card:hover::before {
-  content: "";
-  width: 104%;
-  height: 102%;
-  border-radius: 8px;
-  background-image: linear-gradient(
-      var(--rotate)
-      , #5ddcff, #3c67e3 43%, #4e00c2);
-  position: absolute;
-  top: -1%;
-  left: -2%;
-  animation: spin 2.5s linear infinite;
-}
-
-.card:hover::after {
-  position: absolute;
-  content: "";
-  top: calc(var(--card-height) / 6);
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  transform: scale(0.8);
-  filter: blur(calc(var(--card-height) / 6));
-  background-image: linear-gradient(
-      var(--rotate)
-      , #5ddcff, #3c67e3 43%, #4e00c2);
-      opacity: 1;
-  transition: opacity .5s;
-  animation: spin 2.5s linear infinite;
-} */
